--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 *{
     margin:0;
     padding:0;
@@ -9,7 +10,15 @@
  body{
     font-size-adjust: 110%;
     height: 100%;
-    background-color: rgb(255, 249, 235);
+    background-color: rgb(244, 244, 244);
+ }
+ h1{
+    font-family: sans-serif;
+    margin: 0 1.8em 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
  }
 
  .card-container{
@@ -18,14 +27,15 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    padding-bottom: 100%;
  }
 
  .card{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: clamp(600px,50vh,50vh);
-    height: clamp(25rem,50vh,50vh);
+    width: clamp(800px,60vh,60vh);
+    height: clamp(10rem,30vh,30vh);
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     background-color: white;
     border-radius:10px ;
@@ -35,28 +45,25 @@
  .image-container{
     width: 30%;
     height: 40%;
+    
  }
  .content-container{
     display: flex;
     flex-direction: column;
     width: 50%;
-    padding: clamp(10px,2vw,2.5em) clamp(8px,3vw,2.5em)
+    padding: clamp(10px,2vw,2.5em) clamp(8px,3vw,2.5em);
+    
  }
 
- .content-container .title{
-    font-size: 0.8rem;
-    letter-spacing: 4px;
- }
+
  .content-container h1{
-    font-family: "Fraunces";
+    font-family: sans-serif;
     margin: 0 1.8em 0 0;
     font-size: clamp(6px, 5vw, 2.0rem);
     margin-bottom:clamp(0.4em,3vh,1em) ;
 
  }
- .content-container h3{
-    font-size: clamp(15px,3vw,1rem);
- }
+
  .content-container *{
     height: auto;
  }
