--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,7 @@
     background-color: rgb(244, 244, 244);
  }
  h1{
-    font-family: sans-serif;
-    margin: 0 1.8em 0 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    
 
  }
 
@@ -27,7 +23,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    padding-bottom: 100%;
+    margin-top: -100vh;
  }
 
  .card{
@@ -70,5 +66,14 @@
  .content-container p{
     padding-right: 0.2em;
     margin-bottom:0.8em;
-    
+    font-family: sans-serif;
+    font-size: clamp(2px, 3vw, 1.0rem);
  }
+ .title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+ }
+
+
