--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,16 @@
  }
 
  body{
-    font-size-adjust: 110%;
+    font-size-adjust: 2000%;
     height: 100%;
     background-color: rgb(244, 244, 244);
  }
  h1{
-    
+    font-family: sans-serif;
+    margin: 0 1.8em 0 0;
+    font-size: clamp(6px, 5vw, 2.0rem);
+    margin-bottom:clamp(0.4em,3vh,1em) ;
+  
 
  }
 
@@ -23,15 +27,15 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    margin-top: -100vh;
+    margin-top: -115vh;
  }
 
  .card{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: clamp(800px,60vh,60vh);
-    height: clamp(10rem,30vh,30vh);
+    width: clamp(1300px,90vh,90vh);
+    height: clamp(20rem,50vh,50vh);
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     background-color: white;
     border-radius:10px ;
@@ -41,7 +45,8 @@
  .image-container{
     width: 30%;
     height: 40%;
-    
+    margin-top: -20%;
+    margin-left: 40%;
  }
  .content-container{
     display: flex;
@@ -67,13 +72,43 @@
     padding-right: 0.2em;
     margin-bottom:0.8em;
     font-family: sans-serif;
-    font-size: clamp(2px, 3vw, 1.0rem);
+    font-size: clamp(5px,4vw, 2.0rem);
  }
  .title{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 60px;
 
  }
 
+ @media(max-width:650px){
+    .image-container{
+        width: 40%;
+        height: 20%;
+        margin-bottom: -0%;
+        margin-left: 80%;
+    }
+    .card{
+        flex-direction: column;
+        width: 80%;
+        height: 60%;
+    }
+    .content-container{
+       display: flex;
+       flex-direction: column;
+        width: 100%;
+    }
 
+
+    .content-container h1{
+        width: 100%;
+    }
+
+
+    .content-container p{
+        padding: 0;
+        height: auto;
+
+    }
+}
