--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: clamp(1300px,90vh,90vh);
-    height: clamp(20rem,50vh,50vh);
+    width: clamp(1100px,80vh,80vh);
+    height: clamp(15rem,40vh,40vh);
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     background-color: white;
     border-radius:10px ;
@@ -72,7 +72,7 @@
     padding-right: 0.2em;
     margin-bottom:0.8em;
     font-family: sans-serif;
-    font-size: clamp(5px,4vw, 2.0rem);
+    font-size: clamp(3px,2vw, 1.0rem);
  }
  .title{
     display: flex;
@@ -82,50 +82,28 @@
 
  }
 
- @media(max-width:1140px){
-    .image-container{
-        width: 40%;
-        height: 20%;
-        margin-bottom: -0%;
-        margin-left: 90%;
-    }
-    .card{
-        flex-direction: column;
-        width: 80%;
-        height: 40%;
-    }
-    .content-container{
-       display: flex;
-       flex-direction: column;
-        width: 100%;
-    }
-
-
-    .content-container {
-        width: 100%;
-    }
-
-
-    .content-container p{
-        padding: 0;
-        height: auto;
-
-    }
+@media (max-width: 650px) {
+      p{
+            padding: 20px;
+      }
 }
-@media(max-height:915px){
-    .card-container{
-        height: 85%;
-    }
- }
 
- @media(min-height:730px){
-    .card-container{
-        height: 100%;
-    }
- }
+@media (max-width: 650px) {
+      .card {
 
- @media(max-height: 919px){
-    .card-container{
-        height: 100%;
-    }
- }
+           display: flex;
+           flex-direction: column;
+           height: 400px;
+
+      }
+}
+
+@media (max-width: 650px) {
+      img{
+            margin: 5px;
+      }
+
+}
+
+
+
